--- a/package.json
+++ b/package.json
@@ -36,18 +36,22 @@
     "proxyquire": "^2.1.0"
   },
   "dependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.1.2",
+    "@babel/cli": "7.2.0",
+    "@babel/core": "7.2.0",
+    "@babel/helpers": "7.2.0",
+    "@babel/helper-module-transforms": "7.1.0",
+    "@babel/plugin-proposal-class-properties": "7.2.1",
+    "@babel/plugin-proposal-decorators": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/parser": "7.2.0",
+    "@babel/preset-env": "7.2.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/preset-typescript": "7.1.0",
+    "@babel/register": "7.0.0",
+    "@babel/runtime": "7.2.0",
+    "@babel/traverse": "7.1.6",
     "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "^3.0.1",
     "@types/history": "^4.7.2",
@@ -57,7 +61,7 @@
     "autoprefixer": "^9.1.5",
     "aws-serverless-express": "^3.3.5",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.2",
+    "babel-loader": "8.0.4",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "bunyan": "^1.8.12",
